Various cleanups
Run code inspection and cleanup some stuff.

Reimplement Custom Portals API with a local build that is ported to 1.20.6.